--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -189,3 +189,25 @@ color: white;
   
 }
 
+@media (min-width: 320px){
+    .inputSuscribite{
+        width: 180px;
+        height: 30px;
+        margin-right: 5px;
+    }
+
+    .venta{
+        margin-top: 15px;
+        font-size: 18px;
+    }
+
+    .secondary{
+        font-size: 15px;
+    }
+
+    .botonSus{
+        width: 80px;
+        height: 30px;
+        font-size: 15px;
+    }
+}
